--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             </nav>
 
             <!-- Navbar End  -->
+            <div class="flex justify-between mt-30 max-sm:mt-7 max-sm:flex-col-reverse">
+                <div class="w-1/2 max-sm:w-full">
+                    <h3 class="font-serif font-bold text-[65px] max-sm:text-2xl max-sm:mt-7">
+                        <span>ALWAYS</span> <span class="text-[#E95A08]">FRESH</span> <br /> <span>FLOWERS</span>
+                    </h3>
+                    <p
+                        class="font-['Inter',sans-serif] font-normal text-[22px] max-sm:text-[14px] text-black opacity-50">
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                        From classic roses to exotic blooms, we offer a wide variety of fresh flowers
+                        that are perfect for any occasion.
+                    </p>
+                </div>
 
 </body>
 
