--- a/index.html
+++ b/index.html
@@ -45,7 +45,26 @@
                         that are perfect for any occasion.
                     </p>
                 </div>
-
+                <!--Banner st -->
+                <div class="w-1/2 max-sm:w-full">
+                    <img class="w-full" src="assets/hero-flower.png" alt="Flow image of hero section">
+                </div>
+            </div>
+            <!--Banner End -->
+        </header>
+        <main>
+            <!-- Our Plants -->
+            <div class="mt-56 max-sm:mt-16 ">
+                <div class="text-center">
+                    <h3 class="font-serif font-bold text-5xl max-sm:text-2xl mb-4">
+                        <span class="text-[#E95A08]">Our</span> Plants
+                    </h3>
+                    <p
+                        class="font-['Inter',sans-serif] font-normal text-[22px] max-sm:text-[14px] text-black opacity-50 w-4xl max-sm:w-80 mx-auto">
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                        From classic roses to exotic blooms, we offer a wide variety of fresh.
+                    </p>
+                </div>
 </body>
 
 </html>
