--- a/index.html
+++ b/index.html
@@ -65,6 +65,90 @@
                         From classic roses to exotic blooms, we offer a wide variety of fresh.
                     </p>
                 </div>
+                <!-- START CARD Plants-->
+                <div class="mt-12 max-sm:mt-7 grid grid-cols-4 max-sm:grid-cols-2 gap-5 place-items-center">
+                    <div class="max-w-72 max-sm:max-w-44 text-center font-['Inter',sans-serif] ">
+                        <img class="w-full" src="./assets/sample-flower-image.png" alt="">
+                        <div class="mt-7 mb-7">
+                            <p class="font-medium">Lily Blossom</p>
+                            <p class="font-bold">20 USD</p>
+                        </div>
+                        <button
+                            class="bg-[#E95A08]  hover:bg-black text-white font-semibold text-base w-full h-12 transition duration-700 ease-in-out">ADD
+                            TO CART</button>
+                    </div>
+                    <div class=" max-w-72 max-sm:max-w-44 text-center font-['Inter',sans-serif] ">
+                        <img class=" w-full" src="./assets/sample-flower-image.png" alt="">
+                        <div class="mt-7 mb-7">
+                            <p class="font-medium">Lily Blossom</p>
+                            <p class="font-bold">20 USD</p>
+                        </div>
+                        <button
+                            class="bg-[#E95A08] hover:bg-black text-white font-semibold text-base w-full h-12 transition duration-700 ease-in-out">ADD
+                            TO CART</button>
+                    </div>
+                    <div class=" max-w-72 max-sm:max-w-44 text-center font-['Inter',sans-serif] ">
+                        <img class=" w-full" src="./assets/sample-flower-image.png" alt="">
+                        <div class="mt-7 mb-7">
+                            <p class="font-medium">Lily Blossom</p>
+                            <p class="font-bold">20 USD</p>
+                        </div>
+                        <button
+                            class="bg-[#E95A08]  hover:bg-black text-white font-semibold text-base w-full h-12 transition duration-700 ease-in-out">ADD
+                            TO CART</button>
+                    </div>
+                    <div class=" max-w-72 max-sm:max-w-44 text-center font-['Inter',sans-serif] ">
+                        <img class=" w-full" src="./assets/sample-flower-image.png" alt="">
+                        <div class="mt-7 mb-7">
+                            <p class="font-medium">Lily Blossom</p>
+                            <p class="font-bold">20 USD</p>
+                        </div>
+                        <button
+                            class="bg-[#E95A08]  hover:bg-black text-white font-semibold text-base w-full h-12 transition duration-700 ease-in-out">ADD
+                            TO CART</button>
+                    </div>
+                    <div class=" max-w-72 max-sm:max-w-44 text-center font-['Inter',sans-serif] ">
+                        <img class=" w-full" src="./assets/sample-flower-image.png" alt="">
+                        <div class="mt-7 mb-7">
+                            <p class="font-medium">Lily Blossom</p>
+                            <p class="font-bold">20 USD</p>
+                        </div>
+                        <button
+                            class="bg-[#E95A08]  hover:bg-black text-white font-semibold text-base w-full h-12 transition duration-700 ease-in-out">ADD
+                            TO CART</button>
+                    </div>
+                    <div class=" max-w-72 max-sm:max-w-44 text-center font-['Inter',sans-serif] ">
+                        <img class=" w-full" src="./assets/sample-flower-image.png" alt="">
+                        <div class="mt-7 mb-7">
+                            <p class="font-medium">Lily Blossom</p>
+                            <p class="font-bold">20 USD</p>
+                        </div>
+                        <button
+                            class="bg-[#E95A08]  hover:bg-black text-white font-semibold text-base w-full h-12 transition duration-700 ease-in-out">ADD
+                            TO CART</button>
+                    </div>
+                    <div class=" max-w-72 max-sm:max-w-44 text-center font-['Inter',sans-serif] ">
+                        <img class=" w-full" src="./assets/sample-flower-image.png" alt="">
+                        <div class="mt-7 mb-7">
+                            <p class="font-medium">Lily Blossom</p>
+                            <p class="font-bold">20 USD</p>
+                        </div>
+                        <button
+                            class="bg-[#E95A08]  hover:bg-black text-white font-semibold text-base w-full h-12 transition duration-700 ease-in-out">ADD
+                            TO CART</button>
+                    </div>
+                    <div class=" max-w-72 max-sm:max-w-44 text-center font-['Inter',sans-serif] ">
+                        <img class=" w-full" src="./assets/sample-flower-image.png" alt="">
+                        <div class="mt-7 mb-7">
+                            <p class="font-medium">Lily Blossom</p>
+                            <p class="font-bold">20 USD</p>
+                        </div>
+                        <button
+                            class="bg-[#E95A08]  hover:bg-black text-white font-semibold text-base w-full h-12 transition duration-700 ease-in-out">ADD
+                            TO CART</button>
+                    </div>
+                </div>
+            </div>
 </body>
 
 </html>
