mian footer end

--- a/index.html
+++ b/index.html
@@ -149,6 +149,142 @@
                     </div>
                 </div>
             </div>
+            <!-- Plants Lover -->
+            <div class=" flex items-center justify-center max-w-[1140px] mx-auto mt-52 max-sm:mt-10 max-sm:flex-col ">
+                <div class=" w-1/2 max-sm:w-full">
+                    <div class="relative inline-block">
+                        <img class="" src="assets/flower-store.png" alt="A man organizing flower in the store">
+                        <img class="max-sm:hidden w-71.5 absolute top-0 right-0 translate-x-2/5 -translate-y-2/5 drop-shadow-xl/25 rounded-full animate-bounce"
+                            src="assets/trusted-badge.png" alt="">
+                    </div>
+                </div>
+                <div class="w-1/2 max-sm:w-full max-sm:mt-5 ml-[60px] mt-[38px] mb-[38px] max-sm:ml-[17px]">
+                    <h1 class="font-serif font-bold text-[50px] max-sm:text-2xl mb-5 max-sm:4">
+                        Flower & Plants Lover
+                    </h1>
+                    <ul
+                        class="list-disc list-inside font-['Inter',sans-serif] font-normal text-[22px] max-sm:text-[14px] opacity-50 space-y-5 max-sm:space-y-4">
+                        <li>Indulge your senses with the beauty and fragrance of our
+                            fresh flower shop. From classic roses to exotic blooms,
+                            we offer a wide variety of fresh.
+                        </li>
+                        <li>Indulge your senses with the beauty and fragrance of our
+                            fresh flower shop. From classic roses to exotic blooms,
+                            we offer a wide variety of fresh.
+                        </li>
+                        <li>Indulge your senses with the beauty and fragrance of our
+                            fresh flower shop. From classic roses to exotic blooms,
+                            we offer a wide variety of fresh.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Latest -->
+            <div class="pt-30">
+                <div class="max-sm:mt-[143px] mt-[134px] mb-30 max-sm:mb-10">
+                    <div class="text-center">
+                        <h3 class="font-serif font-bold text-5xl max-sm:text-2xl mb-4">
+                            <span class="text-[#E95A08]">Latest</span> Deals
+                        </h3>
+                        <p
+                            class="font-['Inter',sans-serif] font-normal text-[22px] max-sm:text-[14px] text-black opacity-50 w-4xl max-sm:w-80 mx-auto">
+                            Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses
+                            to exotic blooms, we offer a wide variety of fresh.
+                        </p>
+                    </div>
+                    <div
+                        class=" flex justify-between items-start text-white font-serif font-bold gap-6 max-sm:flex-col pt-30">
+                        <div class="w-1/3 max-sm:w-full space-y-6">
+                            <!-- Bloom-deal -->
+                            <div
+                                class="relative bg-[url('assets/deal-bloom.png')] bg-no-repeat bg-cover bg-center rounded-xl h-[206px]">
+                                <div class="absolute inset-0 bg-black/40 rounded-xl"></div>
+                                <div class="relative z-10 p-4 h-full flex flex-col justify-center">
+                                    <h4 class="text-xl mb-2 text-center ">60% Off | Bloom Plant</h4>
+                                    <a class="underline font-['Inter',sans-serif] font-semibold text-lg hover:no-underline text-center"
+                                        href="#">Shop Now</a>
+                                </div>
+                            </div>
+                            <!-- Ana deal -->
+                            <div
+                                class="relative bg-[url('assets/deal-ana.png')] bg-no-repeat bg-cover bg-center rounded-xl h-[206px]">
+                                <div class="absolute inset-0 bg-black/40 rounded-xl"></div>
+                                <div class="relative z-10 p-4 h-full flex flex-col justify-center">
+                                    <h4 class="text-xl mb-2 text-center">30% Off | Ana Plant</h4>
+                                    <a class="underline font-['Inter',sans-serif] font-semibold text-lg hover:no-underline text-center"
+                                        href="#">Shop Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Zabo  -->
+                        <div
+                            class="relative w-2/3 max-sm:w-full bg-[url('assets/deal-zabo.png')] bg-no-repeat bg-cover bg-center rounded-2xl h-[432px]">
+                            <div class="absolute inset-0 bg-black/40 rounded-xl"></div>
+                            <div class="relative z-10 p-6 h-full flex flex-col justify-center">
+                                <h4 class="text-4xl mb-4 text-center">25% Off | Zabo Plant</h4>
+                                <a class="underline font-['Inter',sans-serif] font-semibold text-2xl hover:no-underline text-center"
+                                    href="#">Shop Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+    <!-- Join colorful -->
+    <div
+        class="w-full bg-[url(assets/news-letter-bg.png)] h-[533px] max-sm:h-[275px] bg-no-repeat bg-cover bg-center flex items-center justify-center">
+        <div class="max-sm:w-[321px]">
+            <h1 class="font-serif font-bold text-[50px] max-sm:text-[20px] max-sm:text-center text-white">Join
+                the colorful Bunch</h1>
+
+            <div class="w-full flex mt-[23px]">
+                <input class="w-3/4 bg-white p-2 " type="email" name="" id="" placeholder="Write email">
+                <button
+                    class="w-1/4 bg-[#E95A08] hover:bg-black text-white font-semibold text-base h-12 ">Subscribe</button>
+
+            </div>
+        </div>
+
+    </div>
+    </main>
+    <footer class=" max-w-[1140px] mx-auto mt-12 max-sm:mx-4 max-sm:mt-3.5 mb-12">
+        <!-- Footer St -->
+
+        <div class="grid grid-cols-5 gap-x-[110.67px]  max-sm:grid-cols-1">
+            <div class="col-span-2 max-sm:col-span-1 max-sm:mb-5">
+                <img class="w-[135px] h-auto" src="assets/logo.png" alt="footer logo">
+                <p
+                    class="font-['Inter',sans-serif] font-normal text-[22px] max-sm:text-[16px] text-black opacity-50 mt-4">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+            </div>
+            <div class="text-gray-500 max-sm:mb-8">
+                <ul class="space-y-8">
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Blog</li>
+                    <li>FAQ</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="text-gray-500 max-sm:mb-8">
+                <ul class="space-y-8">
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Privacy Policy</li>
+                    <li>Terms of Service</li>
+                    <li>Help Center</li>
+                </ul>
+            </div>
+            <div class="flex justify-between gap-x-6 max-sm:justify-start">
+                <img class="w-9 h-9" src="assets/icon-linkedin.png" alt="LinkedIn icon">
+                <img class="w-9 h-9" src="assets/icon-twitter.png" alt="Twitter icon">
+                <img class="w-9 h-9" src="assets/icon-facebook.png" alt="Facebook icon">
+                <img class="w-9 h-9" src="assets/icon-youtube.png" alt="Youtube Icon">
+            </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
